Se trató el objeto Camión
No resulta pues no me reconoce Datos.Datos.Camion y no me da acceso a Datos.Datos

--- a/3 - Proyecto/Despacho/Datos/Datos.csproj
+++ b/3 - Proyecto/Despacho/Datos/Datos.csproj
@@ -7,4 +7,12 @@
     <ApplicationIcon />
     <StartupObject />
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="Datos\Camion.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Microsoft.VisualBasic" />
+  </ItemGroup>
 </Project>
