--- a/3 - Proyecto/Despacho/WebApp/WebApp.csproj
+++ b/3 - Proyecto/Despacho/WebApp/WebApp.csproj
@@ -131,6 +131,9 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\CamionController.cs" />
+    <Compile Include="Controllers\CargaMasivaController.cs" />
+    <Compile Include="Controllers\SolicitudController.cs" />
+    <Compile Include="Controllers\ExistenciaController.cs" />
     <Compile Include="Controllers\ClienteController.cs" />
     <Compile Include="Controllers\EstadoEquipoController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -2468,6 +2471,9 @@
     <Content Include="Views\Cliente\Index.cshtml" />
     <Content Include="Views\Camion\Index.cshtml" />
     <Content Include="Views\TipoSolicitud\Index.cshtml" />
+    <Content Include="Views\CargaMasiva\Index.cshtml" />
+    <Content Include="Views\Solicitud\Index.cshtml" />
+    <Content Include="Views\Existencia\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
