--- a/3 - Proyecto/Despacho/WebApp/WebApp.csproj
+++ b/3 - Proyecto/Despacho/WebApp/WebApp.csproj
@@ -140,6 +140,7 @@
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\TipoDocumentoController.cs" />
     <Compile Include="Controllers\TipoSolicitudController.cs" />
+    <Compile Include="Controllers\UsuarioController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -154,6 +155,7 @@
     <Content Include="Content\css\externos\bootstrap.css" />
     <Content Include="Content\css\externos\bootstrap.min.css" />
     <Content Include="Content\js\CargaMasiva.js" />
+    <Content Include="Content\js\Usuario.js" />
     <Content Include="Content\less\general.less" />
     <Content Include="Content\less\home.less" />
     <Content Include="Content\less\cargaMasiva.less" />
@@ -2498,6 +2500,7 @@
     <Folder Include="Models\" />
     <Folder Include="Views\EstadoEquipo\" />
     <Folder Include="Views\TipoDocumento\" />
+    <Folder Include="Views\Usuario\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\fonts\glyphicons-halflings-regular.woff2" />
