--- a/3 - Proyecto/Despacho/WebApp/WebApp.csproj
+++ b/3 - Proyecto/Despacho/WebApp/WebApp.csproj
@@ -134,7 +134,9 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\CamionController.cs" />
     <Compile Include="Controllers\CargaMasivaController.cs" />
+    <Compile Include="Controllers\ClasificacionController.cs" />
     <Compile Include="Controllers\EmpresaTransporteController.cs" />
+    <Compile Include="Controllers\EnlacesController.cs" />
     <Compile Include="Controllers\GerenciaController.cs" />
     <Compile Include="Controllers\PerfilController.cs" />
     <Compile Include="Controllers\PrioridadController.cs" />
@@ -164,10 +166,12 @@
     <Content Include="Content\img\Caja.png" />
     <Content Include="Content\img\Caja.svg" />
     <Content Include="Content\img\producto.png" />
+    <Content Include="Content\js\Enlaces.js" />
     <Content Include="Content\js\Existencia.js" />
     <Content Include="Content\js\CargaMasiva.js" />
     <Content Include="Content\js\EmpresaTransporte.js" />
     <Content Include="Content\js\Gerencia.js" />
+    <Content Include="Content\js\Clasificacion.js" />
     <Content Include="Content\js\Prioridad.js" />
     <Content Include="Content\js\Perfil.js" />
     <Content Include="Content\js\UnidadMedida.js" />
@@ -180,6 +184,7 @@
     <Content Include="Content\less\estadoequipo.less" />
     <Content Include="Content\less\gerencia.less" />
     <Content Include="Content\less\existencia.less" />
+    <Content Include="Content\less\clasificacion.less" />
     <None Include="Content\less\login.less" />
     <Content Include="Content\img\Camión con Cajas.svg" />
     <Content Include="Content\img\logo-invertido.png" />
@@ -2521,6 +2526,10 @@
     <Content Include="Views\TipoSolicitud\TipoSolicitud.cshtml" />
     <Content Include="Views\UnidadNegocio\UnidadNegocio.cshtml" />
     <Content Include="Views\Usuario\Usuario.cshtml" />
+    <Content Include="Views\Clasificacion\Index.cshtml" />
+    <Content Include="Views\Clasificacion\Clasificacion.cshtml" />
+    <Content Include="Views\Enlaces\Index.cshtml" />
+    <Content Include="Views\Enlaces\Enlaces.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -2640,6 +2649,7 @@
     <Content Include="Content\less\tiposolicitud.less" />
     <Content Include="Content\less\perfil.less" />
     <Content Include="Content\less\prioridad.less" />
+    <Content Include="Content\less\enlace.less" />
     <None Include="packages.config" />
     <Content Include="Content\js\externos\jquery-3.4.1.slim.min.map" />
     <Content Include="Content\js\externos\jquery-3.4.1.min.map" />
